tabla de vehiculos x cliente

--- a/src/centro_garantia_vehiculos/CMakeLists.txt
+++ b/src/centro_garantia_vehiculos/CMakeLists.txt
@@ -19,8 +19,8 @@ set(PROJECT_SOURCES
         centrogarantiavehiculo.cpp
         centrogarantiavehiculo.h
         centrogarantiavehiculo.ui
-        Cliente.cpp
-        Cliente.h
+        Clases.cpp
+        Clases.h
         ${TS_FILES}
 )
 
