se muestran los items en tabla vehiculos x cliente dinamicamente parte 1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,5 +49,6 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "C:/Users/karim/Desktop/taller-mecanico-so/src/centro_garantia_vehiculos"
 }
