Refactorizar estaciones de trabajo

--- a/src/taller/CMakeLists.txt
+++ b/src/taller/CMakeLists.txt
@@ -26,6 +26,8 @@ set(PROJECT_SOURCES
     server.cpp
     ../Vehiculo.h
     ../Vehiculo.cpp
+    ../EstacionTrabajo.h
+    ../EstacionTrabajo.cpp
     ../Cliente.h
     ../Cliente.cpp
 
