Leer y escribir clientes a su archivo desde el centro de garantía

--- a/src/centro_garantia_vehiculos/CMakeLists.txt
+++ b/src/centro_garantia_vehiculos/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
 
 set(TS_FILES centro_garantia_vehiculos_es_VE.ts)
+include_directories(../)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -21,6 +22,14 @@ set(PROJECT_SOURCES
         centrogarantiavehiculo.ui
         Clases.cpp
         Clases.h
+        ../Pieza.h
+        ../Pieza.cpp
+        ../SistemaVehiculo.h
+        ../SistemaVehiculo.cpp
+        ../Vehiculo.h
+        ../Vehiculo.cpp
+        ../Cliente.h
+        ../Cliente.cpp
         ${TS_FILES}
 )
 
