Inventario de repuestos del taller con la clase Inventario

--- a/src/centro_garantia_vehiculos/CMakeLists.txt
+++ b/src/centro_garantia_vehiculos/CMakeLists.txt
@@ -22,6 +22,8 @@ set(PROJECT_SOURCES
         centrogarantiavehiculo.ui
         ../Pieza.h
         ../Pieza.cpp
+        ../Inventario.h
+        ../Inventario.cpp
         ../SistemaVehiculo.h
         ../SistemaVehiculo.cpp
         ../Vehiculo.h
