Conectar entradas y salidas con archivos

--- a/src/taller/CMakeLists.txt
+++ b/src/taller/CMakeLists.txt
@@ -38,6 +38,8 @@ set(PROJECT_SOURCES
     ../Servicio.cpp
     ../Cliente.h
     ../Cliente.cpp
+    ../ClienteVehiculo.h
+    ../ClienteVehiculo.cpp
 
     ${TS_FILES}
 )
