Clase de taller mecánico

--- a/src/taller/CMakeLists.txt
+++ b/src/taller/CMakeLists.txt
@@ -40,6 +40,8 @@ set(PROJECT_SOURCES
     ../Cliente.cpp
     ../ClienteVehiculo.h
     ../ClienteVehiculo.cpp
+    TallerMecanico.h
+    TallerMecanico.cpp
 
     ${TS_FILES}
 )
