Informar al servidor por TCP que se cargó un nuevo cliente

--- a/src/centro_garantia_vehiculos/CMakeLists.txt
+++ b/src/centro_garantia_vehiculos/CMakeLists.txt
@@ -20,6 +20,8 @@ set(PROJECT_SOURCES
         centrogarantiavehiculo.cpp
         centrogarantiavehiculo.h
         centrogarantiavehiculo.ui
+        clientUtils.h
+        clientUtils.cpp
         ../Pieza.h
         ../Pieza.cpp
         ../Inventario.h
